# DroneVideoMeasure

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  annotations.py  app.py  app_config.py  calibration.py  corner_detector.py  docker-compose-dev.yml  docker-compose.db_upgrade.yml  docker-compose.db_upgrade_windows.yml  docker-compose.override.yml  docker-compose.windows.yml  docker-compose.yml  drone_log_data.py  drones.py  dvm.sh  entrypoint.sh  forms.py  fov.py  help_functions.py  helper_functions.py  home.py  markings.py  misc.py  mypy.ini  package.json  plot_log_data.py  projects.py  pyproject.toml  requirements.txt  version.txt  videos.py
.github/workflows/: docs.yml  joss.yml  release.yml  tests.yml
calibration/: MarkerTracker.py  calibration.py  corner_detector.py  peak_enumerator.py
docs/source/: conf.py  contributing.rst  explanations.rst  howto_guides.rst  index.rst  references.rst  tutorials_guides.rst
docs/source/explanations/: logfile_conversion.md  security.rst  uploading_large_amounts_of_annotations.md
docs/source/howto/: concatenate_videos.md  convert_logfiles.md  install.md  install_from_source.md  migrate_to_new_db_version.md  record_calibration_video.md  use_with_a_fixed_camera.md
docs/source/references/: data_export_format.md  drone_logfile_Input_format_TXTlogToCSVtool.md  drone_logfile_input_format.md  drone_logfile_input_format_AirData.md
docs/source/tutorials/: Migrate_to_new_pc.md  getting_started.md
documentation/: Explanation-LogfileConversion.md  Explanation-UploadingLargeAmountsOfAnnotations.md  Howto - Install Drone Video Measure.md  Howto - Update Drone Video Measure.md  Howto-ConcatenateVideos.md  Howto-ConvertLogfiles.md  Howto-GetTerminalAccessToDockerContainer.md  Howto-InstallDroneVideoMeasure.md  Howto-MigrateToNewPC.md  Howto-PushNewVersionToDockerHub.md  Howto-RecordACalibrationVideo.md  Howto-UninstallDroneVideoMeasure.md  Howto-UpdateDroneVideoMeasure.md  Howto-UpdateJavascriptPackages.md  Howto-UpdatePythonPackages.md  README.md  Reference-DataExportFormat.md  Reference-DockerSetup.md  Reference-DroneLogfileInputFormat.md  Reference-DroneLogfileInputFormatAirData.md  Reference-DroneLogfileInputFormatTXTlogToCSVtool.md  Reference-OverviewOfDevelopmentEnrionment.md  Tutorial - Getting started with Drone Video Measure.md  Tutorial-GettingStartedWithDroneVideoMeasure.md  manual.md
drone/: drone_log_data.py  drones.py  fov.py  plot_log_data.py
dvm_runner/: docker-compose.windows.yml  docker-compose.yml
manual/: manual.md
migrations/versions/: 76afd823e8bb_added_drone.py  8772d6966f4f_added_all_to_database.py  e79f65341868_added_calibration.py
paper/: paper.bib  paper.md
projects/: projects.py  video_gallery.py
src/dvm/: __init__.py  app.py  app_config.py  db_model.py  forms.py  helper_functions.py  home.py  make_celery.py
src/dvm/calibration/: MarkerTracker.py  calibration.py  corner_detector.py  peak_enumerator.py
src/dvm/drone/: drone_log_data.py  drones.py  fov.py  plot_log_data.py
src/dvm/migrations/: env.py
src/dvm/migrations/versions/: 1c01da02bcd0_added_takeoff_altitude_to_the_video_.py  2e034d73923e_.py  4d9e0a758bf7_added_task_error.py  8772d6966f4f_added_all_to_database.py  8aa202e6821d_added_error_on_project.py  f43cf70961bb_.py
src/dvm/projects/: projects.py  video_gallery.py
src/dvm/static/: fabric.adapted.js  mousetrap.min.js  openseadragon-fabricjs-overlay.js  style.css  video_annotator.js
src/dvm/static/colorpicker/: bootstrap-colorpicker.css  (+3 more)
src/dvm/templates/: 404.html  base.html  bootstrap_base.html  bootstrap_wtf.html  index.html  version.html
src/dvm/video/: annotations.py  videos.py
static/: style.css  video_annotater.js  video_annotator.js
templates/: base.html  bootstrap_base.html  index.html  version.html
templates/drones/: calibration.html  calibration_modal.html  drones.html  edit_drone_modal.html  index.html  new_drone_modal.html  remove_drone_modal.html  view_calibration.html
templates/projects/: cancat_videos.html  concat_modal.html  concat_videos.html  edit_project_modal.html  index.html  new_name_modal.html  new_project_modal.html  optionsModal.html  plot.html  projects.html  remove_project_modal.html  upload.html  video.html  video_controls.html  video_gallery.html
templates/video_gallery/: concat_videos.html  upload.html  video_gallery.html
templates/videos/: change_video_start_time_modal.html  clear_markings_modal.html  line_width_modal.html  optionsModal.html  plot.html  toolbar.html  upload_annotations_from_csv_file.html  video.html  video_controls.html
tests/: conftest.py  test_calibration.py  test_drone.py  test_fov.py  test_home.py  test_projetcs.py
tests/test_data/: test_drone_log.csv
video/: annotations.py  videos.py
(+18 files in other folders)
